--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 master.jdbc.driverClassName=com.mysql.jdbc.Driver
-master.jdbc.url=jdbc:mysql://10.120.153.150:3306/yldb
-master.jdbc.username=vstoredev
-master.jdbc.password=vstoredev
+master.jdbc.url=jdbc:mysql://xx.xx.xx.xx:3306/yldb
+master.jdbc.username=xxxx
+master.jdbc.password=xxxx
 
 slaver.jdbc.driverClassName=com.mysql.jdbc.Driver
-slaver.jdbc.url=jdbc:mysql://10.120.153.150:3306/yldb2
-slaver.jdbc.username=vstoredev
-slaver.jdbc.password=vstoredev
+slaver.jdbc.url=jdbc:mysql://xx.xx.xx.xx:3306/yldb2
+slaver.jdbc.username=xxxx
+slaver.jdbc.password=xxxx
